--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,8 @@ version: "3.7"
 
 services:
   rest-api:
-    build: .
+    # build: .
+    image: maormor/tienda-dulces:v1
     ports:
       - 80:8080
     depends_on:
