--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     depends_on:
       - mysql
     environment:
-      spring.datasource.url: jdbc:mysql://192.168.100.50:3306/tienda_dulces
+      spring.datasource.url: jdbc:mysql://mysql:3306/tienda_dulces
       spring.datasource.password: pass
 
   mysql:
@@ -17,8 +17,8 @@ services:
     volumes:
       - ./db:/var/lib/mysql
       - ./tienda_dulces.sql:/docker-entrypoint-initdb.d/tienda_dulces.sql
-    ports:
-      - 3306:3306
+#    ports:
+#      - 3306:3306
     environment:
       MYSQL_ROOT_PASSWORD: pass
       MYSQL_DATABASE: tienda_dulces
