--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,12 +5,22 @@ services:
     # build: .
     image: maormor/tienda-dulces:v2
     ports:
-      - 80:8080
+      - 8080:8080
     depends_on:
       - mysql
     environment:
       spring.datasource.url: jdbc:mysql://mysql:3306/tienda_dulces
       spring.datasource.password: pass
+      
+  carrito-compras:
+    image: maormor/carrito-compras:v1
+    ports:
+      - 8081:80
+    depends_on:
+      - mysql
+    environment:
+      HOST: mysql
+      DB_PASS: pass
 
   mysql:
     image: mysql:5.7
