--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,8 +19,10 @@ services:
     depends_on:
       - mysql
     environment:
-      HOST: mysql
-      DB_PASS: pass
+      DB_HOST: mysql
+      DB_PASSWORD: pass
+    links:
+      - mysql
 
   mysql:
     image: mysql:5.7
